deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      tolerations:
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 10
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 10
      containers:
        - name: auth-service
          image: docker.io/tenkr/auth-service-image:lastest
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campground-service
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: campground-service
  template:
    metadata:
      labels:
        app: campground-service
    spec:
      tolerations:
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 10
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 10
      containers:
        - name: campground-service
          image: docker.io/tenkr/campground-service-image:lastest
          ports:
            - containerPort: 81
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-chat-service
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llm-chat-service
  template:
    metadata:
      labels:
        app: llm-chat-service
    spec:
      tolerations:
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 10
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 10
      containers:
        - name: llm-chat-service
          image: docker.io/tenkr/llm-chat-service-image:lastest
          ports:
            - containerPort: 82
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-service
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail-service
  template:
    metadata:
      labels:
        app: mail-service
    spec:
      tolerations:
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 10
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 10
      containers:
        - name: mail-service
          image: docker.io/tenkr/mail-service-image:v2
          ports:
            - containerPort: 83
