campground-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campground-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: campground-service
  template:
    metadata:
      labels:
        app: campground-service
    spec:
      containers:
        - name: campground-service
          image: final-project-campground-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 81
---

apiVersion: v1
kind: Service
metadata:
  name: campground-service
spec:
  type: LoadBalancer
  selector:
    app: campground-service
  ports:
    - port: 81
      targetPort: 81
