deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-service-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multi-service-pod
  template:
    metadata:
      labels:
        app: multi-service-pod
    spec:
      containers:
        - name: auth-service
          image: final-project-auth-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 84
        - name: campground-service
          image: final-project-campground-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 81
        - name: llm-chat-service
          image: final-project-llm-chat-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 82
        - name: mail-service
          image: final-project-mail-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 83
---

apiVersion: v1
kind: Service
metadata:
  name: multi-service-pod
spec:
  type: LoadBalancer
  ports:
    - name: auth-port
      port: 84      # Route traffic for auth-service
      targetPort: 84 # Container port for auth-service
    - name: campground-port
      port: 81      # Route traffic for campground-service
      targetPort: 81 # Container port for campground-service
    - name: chat-port
      port: 82      # Route traffic for llm-chat-service
      targetPort: 82 # Container port for llm-chat-service
    - name: mail-port
      port: 83      # Route traffic for mail-service
      targetPort: 83 # Container port for mail-service
  selector:
    app: multi-service-pod
