llm-chat-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-chat-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llm-chat-service
  template:
    metadata:
      labels:
        app: llm-chat-service
    spec:
      containers:
        - name: llm-chat-service
          image: docker.io/tenkr/llm-chat-service-image:lastest
          ports:
            - containerPort: 82
---

apiVersion: v1
kind: Service
metadata:
  name: llm-chat-service
spec:
  type: LoadBalancer
  selector:
    app: llm-chat-service
  ports:
    - port: 82
      targetPort: 82
