mail-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail-service
  template:
    metadata:
      labels:
        app: mail-service
    spec:
      containers:
        - name: mail-service
          image: docker.io/tenkr/mail-service-image:lastest
          ports:
            - containerPort: 83
---

apiVersion: v1
kind: Service
metadata:
  name: mail-service
spec:
  type: LoadBalancer
  selector:
    app: mail-service
  ports:
    - port: 83
      targetPort: 83
