mock.yaml
# Deployments and Services for all four microservices

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: docker.io/tenkr/auth-service-image:lastest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: my-app
spec:
  type: NodePort
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campground-service
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: campground-service
  template:
    metadata:
      labels:
        app: campground-service
    spec:
      containers:
        - name: campground-service
          image: docker.io/tenkr/campground-service-image:lastest
          ports:
            - containerPort: 81
---
apiVersion: v1
kind: Service
metadata:
  name: campground-service
  namespace: my-app
spec:
  type: NodePort
  selector:
    app: campground-service
  ports:
    - protocol: TCP
      port: 81
      targetPort: 81
      nodePort: 30081

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-chat-service
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llm-chat-service
  template:
    metadata:
      labels:
        app: llm-chat-service
    spec:
      containers:
        - name: llm-chat-service
          image: docker.io/tenkr/llm-chat-service-image:lastest
          ports:
            - containerPort: 82
---
apiVersion: v1
kind: Service
metadata:
  name: llm-chat-service
  namespace: my-app
spec:
  type: NodePort
  selector:
    app: llm-chat-service
  ports:
    - protocol: TCP
      port: 82
      targetPort: 82
      nodePort: 30082

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-service
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail-service
  template:
    metadata:
      labels:
        app: mail-service
    spec:
      containers:
        - name: mail-service
          image: docker.io/tenkr/mail-service-image:v2
          ports:
            - containerPort: 83
---
apiVersion: v1
kind: Service
metadata:
  name: mail-service
  namespace: my-app
spec:
  type: NodePort
  selector:
    app: mail-service
  ports:
    - protocol: TCP
      port: 83
      targetPort: 83
      nodePort: 30083

# ConfigMap for environment variables
---
