services.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: my-app
spec:
  type: NodePort
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080

---
apiVersion: v1
kind: Service
metadata:
  name: campground-service
  namespace: my-app
spec:
  type: NodePort
  selector:
    app: campground-service
  ports:
    - protocol: TCP
      port: 81
      targetPort: 81
      nodePort: 30081

---
apiVersion: v1
kind: Service
metadata:
  name: llm-chat-service
  namespace: my-app
spec:
  type: NodePort
  selector:
    app: llm-chat-service
  ports:
    - protocol: TCP
      port: 82
      targetPort: 82
      nodePort: 30082

---
apiVersion: v1
kind: Service
metadata:
  name: mail-service
  namespace: my-app
spec:
  type: NodePort
  selector:
    app: mail-service
  ports:
    - protocol: TCP
      port: 83
      targetPort: 83
      nodePort: 30083
