ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: my-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /campground
            pathType: Prefix
            backend:
              service:
                name: campground-service
                port:
                  number: 81
          - path: /llm-chat
            pathType: Prefix
            backend:
              service:
                name: llm-chat-service
                port:
                  number: 82
          - path: /mail
            pathType: Prefix
            backend:
              service:
                name: mail-service
                port:
                  number: 83
